welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
    c=true
     ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getCouleurSol().equals(Color.green)){
    ^